opam-version: "2.0"
name: "mcl"
version: "dev"
synopsis: "OCaml MCL bindings"
maintainer: "mccoy@fhcrc.org"
depends: ["ocaml" "ocamlfind" "dune" {>= "2.0"}]
build: [
  # ["./configure" "--prefix" prefix]
  # ["make" "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs]
  # ["ocaml" "setup.ml" "-configure" "--prefix" prefix]
  # ["ocaml" "setup.ml" "-build"]
  # ["ocaml" "setup.ml" "-install"]
]

